objects/Roof_Design__c.object
<CustomObject>
    <fields>
        <fullName>Account_Link__c</fullName>
        <formula>HYPERLINK(Left($Api.Enterprise_Server_URL_190,(find(&apos;/services&apos;,$Api.Enterprise_Server_URL_190))) + Account_Name__c, Left($Api.Enterprise_Server_URL_190,(find(&apos;/services&apos;,$Api.Enterprise_Server_URL_190))) + Account_Name__c, Account_Name__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Formula__c</fullName>
        <description>Formula field to pull Account Name. For use in Email Alerts</description>
        <formula>Account_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Roof Designs</relationshipLabel>
        <relationshipName>Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Identify if the Roof Design record is Active or In Active.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <description>Date Time field derived from Created Date for reporting purpose</description>
        <formula>DATETIMEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Design_DesignId__c</fullName>
        <description>Field to Save Aurora Design Id</description>
        <externalId>true</externalId>
        <label>Aurora Design Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Design_Details__c</fullName>
        <description>Hyperlink to view Desgin Details information</description>
        <formula>HYPERLINK(&apos;/apex/DesignDetails?Id=&apos;+Id,&apos;View Info&apos;,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Design Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Commercial:
Field added to record information from Helix Design Request information forms
Rel WW09 - 2017
PO: Miltos Vratimos</description>
        <label>Design</label>
        <referenceTo>Design__c</referenceTo>
        <relationshipLabel>Roof Designs</relationshipLabel>
        <relationshipName>Roof_Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Designer_User__c</fullName>
        <description>Formula field to determine if current user is the designer. To be used in the My Pending Designs list view.</description>
        <formula>IF(Designer__c = $User.Id , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Designer$User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Designer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User lookup field to assign the Roof Design to a specific designer to make it easier to determine who is working on a design and all the designs that are currently being worked on.</description>
        <label>Designer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Roof_Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDDiE_Retrofit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indication that the record was created as part of EDDiE Data Retrofit</description>
        <label>EDDiE Retrofit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_SLA_In_Minutes__c</fullName>
        <description>Expected SLA In Minutes at the time this roof design was created</description>
        <label>Expected SLA In Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expedited_Design_Price__c</fullName>
        <description>Price for Expedited Roof Design</description>
        <label>Expedited Design Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expedited_Design_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Expedite a Design Request</description>
        <inlineHelpText>Expedited design requests will cost an additional $20 per request and will be completed within 30 minutes of initial request</inlineHelpText>
        <label>Expedited Design Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Message__c</fullName>
        <description>Field to save Message when Integration fails to update Roof Design Details</description>
        <label>Integration Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <description>Field to save status by Informatica when trying to update Roof Design Details</description>
        <label>Integration Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Launch_Design__c</fullName>
        <description>Edit Design to launch the user to Aurora Design page</description>
        <formula>IF( OR( AND(ISPICKVAL($User.UserType, &apos;Standard&apos;), ISPICKVAL(Origin__c, &apos;Request&apos;)),AND(ISPICKVAL($User.UserType , &apos;PowerPartner&apos;), ISPICKVAL(Origin__c, &apos;Self Service&apos;),INCLUDES( $User.Business_Function__c ,&apos;Aurora Design Licensee&apos;))),HYPERLINK(&apos;/apex/LaunchAurora?action=CreateDesign&amp;roofDesignId=&apos;+Id,image(&quot;/servlet/servlet.FileDownload?file=015340000025Quz&quot;, &quot;Launch Design&quot;),&apos;_blank&apos;) , IF(
OR( AND(ISPICKVAL($User.UserType, &apos;Standard&apos;), ISPICKVAL(Origin__c, &apos;Self Service&apos;)),AND(ISPICKVAL($User.UserType , &apos;PowerPartner&apos;), ISPICKVAL(Origin__c, &apos;Request&apos;))),
&apos;Not a valid option for this Origin type&apos;,
IF(
AND(ISPICKVAL($User.UserType , &apos;PowerPartner&apos;), NOT(INCLUDES( $User.Business_Function__c ,&apos;Aurora Design Licensee&apos;))),
&apos;Not an Aurora Design Licensee&apos;,&apos;&apos;
)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Launch Design</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxFit_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Equinox. Self lookup relationship to identify the MaxFit design the actual design is associated with. For a Maxfit design, this field will be blank</description>
        <label>MaxFit Master</label>
        <referenceTo>Roof_Design__c</referenceTo>
        <relationshipLabel>Roof Designs</relationshipLabel>
        <relationshipName>Roof_Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes_for_Design_Team__c</fullName>
        <description>Notes for Design Team when requesting a new design even if an active completed design exits</description>
        <label>Notes for Design Team</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>created for Dynamic Proposal project to different between the designs that were requested and created</description>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Paired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Residential Actual Design</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Roof Designs</relationshipLabel>
        <relationshipName>Equinox_Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLA_In_Hours__c</fullName>
        <description>Time taken from Design Creation to Status Complete</description>
        <label>SLA In Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_in_Minutes__c</fullName>
        <description>SLA In Minutes</description>
        <formula>(Status_Completed_Date_Time__c - CreatedDate ) * 24 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA in Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Completed_Date_Time__c</fullName>
        <description>DateTime when the Status goes to Complete</description>
        <label>Status Completed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locked</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Size__c</fullName>
        <description>Aurora- Captures the design system size</description>
        <label>System Size</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Design Type</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>MaxFit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Design</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unable_to_Process_Reason__c</fullName>
        <description>Reason for being unable to process a Roof Design</description>
        <label>Unable to Process Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Ground Mount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location cannot be verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimum panels not met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unclear Roof visibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for additional information</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Roof Design</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Active__c</columns>
        <columns>Design_DesignId__c</columns>
        <columns>Design_Details__c</columns>
        <columns>Launch_Design__c</columns>
        <columns>Origin__c</columns>
        <columns>Paired__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Pending_Designs</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Launch_Design__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Roof_Design__c.Residential_MaxFit_Designs</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Designer_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Unable_to_Process_Reason__c</field>
            <operation>equals</operation>
        </filters>
        <label>My Pending Designs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pending_Designs</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Expedited_Design_Request__c</columns>
        <columns>Status__c</columns>
        <columns>Launch_Design__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>MaxFit</value>
        </filters>
        <filters>
            <field>Unable_to_Process_Reason__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Designer__c</field>
            <operation>equals</operation>
        </filters>
        <label>Unassigned Pending Designs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pending_Expedited_Requests</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Expedited_Design_Request__c</columns>
        <columns>Status__c</columns>
        <columns>Launch_Design__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>MaxFit</value>
        </filters>
        <filters>
            <field>Expedited_Design_Request__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Designer__c</field>
            <operation>equals</operation>
        </filters>
        <label>Pending Expedited Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pending_Test_Demo_Designs</fullName>
        <columns>NAME</columns>
        <columns>Account_Link__c</columns>
        <columns>Account_Name_Formula__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Roof_Design__c.Residential_MaxFit_Designs</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Eugene</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Buen</value>
        </filters>
        <label>Pending Test/Demo Designs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Unable_to_Process_Designs</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Launch_Design__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Unable_to_Process_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>MaxFit</value>
        </filters>
        <filters>
            <field>Unable_to_Process_Reason__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Unable to Process Designs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>D-{00000}</displayFormat>
        <label>Design ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Roof Designs</pluralLabel>
    <recordTypes>
        <fullName>Commercial_Design</fullName>
        <active>true</active>
        <label>Commercial Design</label>
    </recordTypes>
    <recordTypes>
        <fullName>Residential_Actual_Design</fullName>
        <active>true</active>
        <description>Residential Actual Design</description>
        <label>Residential Actual Design</label>
    </recordTypes>
    <recordTypes>
        <fullName>Residential_MaxFit_Designs</fullName>
        <active>true</active>
        <description>Residential MaxFit Design</description>
        <label>Residential MaxFit Designs</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>